# URL-Shortener-BlazinglyFast

./: README.md
url_app/: Cargo.toml
url_app/migrations/: 20250201162815_create_urls_table.sql
url_app/src/: db.rs  lib.rs  main.rs
url_app/src/errors/: mod.rs
url_app/src/handlers/: api.rs  frontend.rs  index.rs  mod.rs  redirect.rs  short_urls.rs  static_files.rs  submit.rs
url_app/src/models/: mod.rs
url_app/src/routes/: mod.rs
url_app/src/templates/: index.html  mod.rs
url_app/static/css/: styles.css
url_app/static/js/: app.js
