[package]
name = "url_app"
version = "0.1.0"
edition = "2021"

[lib]
name = "url_app"
path = "src/lib.rs"

[[bin]]
name = "url_app"
path = "src/main.rs"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1.0"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }
actix-rt = "2.8.0"
thiserror = "2.0.11"
url = "2.4.6"
nanoid = "0.4.0"
env_logger = "0.11.6"
chrono = {version = "0.4.31", features = ["serde"]}
actix-files = "0.6.2"
rust-embed = "8.5.0"
mime_guess = "2.0.5"